Fix overflow

--- a/docs/css/bootstrap.css
+++ b/docs/css/bootstrap.css
@@ -196,6 +196,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   zoom: 1;
+  overflow: auto;
 }
 .container:before, .container:after {
   display: table;
@@ -1226,13 +1227,13 @@ table .headerSortUp.purple, table .headerSortDown.purple {
  * Repeatable UI elements outside the base styles provided from the scaffolding
  * ---------------------------------------------------------------------------- */
 .topbar {
-  height: 40px;
+  height: 50px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10000;
-  overflow: visible;
+  overflow: auto;
 }
 .topbar a {
   color: #bfbfbf;
@@ -1337,6 +1338,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  overflow: auto;
 }
 .topbar div > ul, .nav {
   display: block;
@@ -1521,6 +1523,7 @@ a.menu:after, .dropdown-toggle:after {
   line-height: 18px;
   color: #808080;
   text-shadow: 0 1px 0 #ffffff;
+  overflow: auto;
 }
 .topbar .dropdown-menu a:hover, .dropdown-menu a:hover {
   background-color: #dddddd;
